@@ -1,3 +1,11 @@
+Mon Jan  8 13:31:15 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	Partial update of tempname module from gnulib. (Once we switch to
+	automake, it will be possible to import it properly.)
+
+	* m4/tempname.m4: New file.
+	* configure.ac: Use gl_FUNC_GEN_TEMPNAME.
+
 Mon Jan  8 13:06:42 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* docs/ToDo: Rename to ...
